# gd_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  mypy.ini  package-lock.json  pylintrc.toml  pyproject.toml  pytest.ini  ruff.toml  tailwind.config.js
.github/workflows/: example.yml  lint.yml  pylint.yml  ruff_lint.yml  run_tests.yml
app/: apps.py
apps/filterbar/: apps.py
apps/geocoding/: autocomplete_response_sample.json  urls.py  views.py
apps/investment/: apps.py
apps/map/: admin.py  client.py  datamodels.py  models.py  serializers.py  url.py  urls.py  utils.py
apps/map/filters/: __init__.py  category.py  distance.py  name.py
apps/map/migrations/: 0001_initial.py  0002_savedpointsearch.py  0003_alter_osmpoint_table.py
apps/map/static/js/: distance_resize.js  map.js
apps/map/templates/: maptest.html
apps/map/templates/map/: _head.html  map.html  maptest.html  maptestsavessearches.html  saved_searches.html
apps/map/views/: __init__.py  find_points.py  geocode.py  map.py  maptest.py
apps/offer/: admin.py  apps.py  urls.py  views.py
apps/offer/migrations/: 0001_initial.py  0002_offer_status_offer_video_offer_virtual_tour.py  0003_offer_rejected_reason_alter_offer_status.py  0004_offer_uuid_alter_photo_name.py  0005_offer_slug.py  0006_alter_offer_slug.py  0007_collection.py  0008_offer_currency.py  0009_alter_offer_construction_year.py  0010_alter_offer_construction_year.py
apps/offer/models/: __init__.py  collection.py  offer.py  photo.py  tag.py
apps/offer/models/static/: __init__.py  appliances.py  flooring.py  heating_type.py
apps/offer/serializers/: __init__.py  offer.py  photo.py
apps/offer/serialziers/: __init__.py  appliance.py  flooring.py  heating_type.py  offer.py  photo.py
apps/org/: tests.py
apps/price_change/: apps.py  models.py
apps/prices/: urls.py
apps/saved_searches/: apps.py
apps/shared/: __init__.py  fields.py  functions.py  mixins.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/shared/templates/shared/: about.html  (+1 more)
apps/triage/: apps.py  permissions.py
apps/user/: __init__.py  admin.py  models.py  serializers.py  tests.py  url.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_gduser_managers.py  0002_alter_gduser_managers_gduser_account_type_and_more.py  0003_rename_allow_push_notifications_gduser_subscribe_to_newsletter.py  0004_alter_gduser_first_name.py  0005_alter_gduser_account_type.py
dev_scripts/: pylint.sh
filterbar/: apps.py
gd_backend/: asgi.py  celery.py  db_routers.py  settings.py  urls.py  wsgi.py
gd_backend/base_templates/: base.html
gd_backend/base_templates/partials/: meta.html
locale/en/LC_MESSAGES/: django.po
locale/pl/LC_MESSAGES/: django.po
map/: datamodels.py  models.py  serializers.py  url.py  views.py
map/filters/: category.py  distance.py
map/views/: __init__.py  find_points.py  geocode.py
scripts/: pylint.sh
scripts/dev/: celery.sh
shared/: mixins.py  serializers.py
static/base/css/: base.css
templates/: _base.html
templates/allauth/: login.html  register.html
templates/allauth/layouts/: base.html
templates/base/: base.html
templates/gd_backend/: base.html
user/: admin.py  forms.py  models.py
user/migrations/: 0001_initial.py
(+15 files in other folders)
