[tool.poetry]
name = "gd-backend"
version = "0.1.0"
description = ""
authors = ["Kamil Bobola <kamilb9610@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
environs = "^14.2.0"
django-filter = "^25.1"
geopy = "^2.4.1"
redis = "^6.2.0"
hiredis = "^3.1.0"
pillow = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-storages = "^1.14.4"
djangorestframework-gis = "^1.1"
django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
requests = "^2.32.3"
pydantic = "^2.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
markdown = "^3.7"
pylint = "^3.3.2"
isort = "^6.0.1"
pre-commit = "^4.0.1"
pytest-django = "^4.9.0"
ruff = "^0.11.13"


[tool.poetry.group.black.dependencies]
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
