[tool.poetry]
name = "gd-backend"
version = "0.1.0"
description = ""
authors = ["Kamil Bobola <kamilb9610@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
environs = "^14.2.0"
django-filter = "^25.1"
geopy = "^2.4.1"
redis = "^6.2.0"
hiredis = "^3.1.0"
pillow = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-storages = "^1.14.4"
djangorestframework-gis = "^1.1"
django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
requests = "^2.32.3"
pydantic = "^2.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
markdown = "^3.7"
pytest-django = "^4.9.0"
ruff = "^0.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"