[tool.poetry]
name = "gd-backend"
version = "0.1.0"
description = ""
authors = ["Kamil Bobola <kamilb9610@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
environs = "^14.2.0"
django-filter = "^25.1"
redis = "^6.2.0"
hiredis = "^3.1.0"
pillow = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-storages = "^1.14.4"
django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
requests = "^2.32.4"
pydantic = "^2.11.5"
psycopg = {extras = ["binary"], version = "^3.2.9"}
drf-spectacular = "^0.28.0"
django-countries = "^7.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
markdown = "^3.7"
pytest-django = "^4.9.0"
ruff = "^0.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"